# codebox-ai

./: .gitignore  Dockerfile.base_image  README.md  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
adr/: cross-platform-isolation-strategy.md
codeboxai/: __init__.py  codebox.py  kernel_manager.py  main.py  mcp_server.py  models.py  server.py  service.py
codeboxai/security/validators/: code.py
examples/: example_mounted_dirs.py  example_openai.py  kitty.py
tests/: test_kernel_manager.py  test_service.py
tests/security/: test_code_validator.py  test_validator_disable.py
