[project]
name = "codebox-ai"
version = "0.1.0"
description = "A secure Python code execution service that provides a self-hosted alternative to OpenAI's Code Interpreter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "CodeBox AI Team (Thomas Conte and claude.ai)"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "docker>=6.1.3",
    "pydantic>=2.4.2",
    "fastapi-utils>=0.8.0",
    "typing-inspect>=0.9.0",
    "jupyter_client>=8.6.3",
    "mcp[cli]>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "debugpy>=1.8.14",
]

[project.optional-dependencies]
examples = [
    "openai==1.59.3",
    "python-dotenv>=1.1.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=codeboxai"
